--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -33,8 +33,8 @@ header:
   navbar:
     enable: true
     align: l
-    show_logo: true
-    show_language: false
+    show_logo: false 
+    show_language: true 
     show_day_night: true
     show_search: true
     highlight_active_link: true
@@ -53,8 +53,8 @@ footer:
 # Localization
 
 locale:
-  date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
+  date_format: 'Jun 8, 2023'
+  time_format: '9:50 AM'
   address_format: en-us
 
 # Site features
@@ -64,16 +64,16 @@ features:
     theme_light: github-light
     theme_dark: dracula
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/fire-five/mypage'
     content_dir: content
     branch: main
   avatar:
     gravatar: false
-    shape: circle
+    shape: rectangle
   comment:
     provider: ''
     disqus:
