--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,8 +20,6 @@ main:
     url: '#contact'
     weight: 50
 
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: uploads/resume.pdf
+    url: uploads/cv.pdf
     weight: 60
